3.0.1 Fix "Pro" label wrapping on a new line

--- a/src/assets/backend/css/style.css
+++ b/src/assets/backend/css/style.css
@@ -920,7 +920,7 @@ html.noscroll .ult-modal {
 						}
 
 						.ult .ult-directory-module__pro-label {
-							display: inline;
+							display: inline-block;
 
 							color: #fff;
 							background: #6bc45a;
